[gd_scene load_steps=35 format=3 uid="uid://cfhmj1vvcbg6r"]

[ext_resource type="Script" path="res://dialogic/cutscene/cutscene8.gd" id="1_35yc7"]
[ext_resource type="Texture2D" uid="uid://dibdc1w6uho4q" path="res://assets_image/Characters/Alyra/Alyra-Sheet.png" id="2_hem0l"]
[ext_resource type="Texture2D" uid="uid://cet4egxc8qsop" path="res://assets_image/Characters/Varek/Varek-Sheet.png" id="3_i3w5h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwwtj"]
size = Vector2(131, 75)

[sub_resource type="Animation" id="Animation_3uu3n"]
resource_name = "cutscene1"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"proxy_disable_player_input_for_cutscene"
}, {
"args": ["run"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": [],
"method": &"_start_dialogic_from_animation"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"proxy_set_player_face_direction"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-1578, -427), 5.0, 1, 1],
"method": &"proxy_move_player_to_position"
}]
}

[sub_resource type="Animation" id="Animation_4t64i"]
resource_name = "cutscene1.1"
length = 2.0
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}]
}

[sub_resource type="Animation" id="Animation_x330y"]
resource_name = "cutscene2"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-1],
"method": &"proxy_set_player_face_direction"
}, {
"args": [],
"method": &"proxy_enable_player_input_after_cutscene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cywr2"]
_data = {
"cutscene1": SubResource("Animation_3uu3n"),
"cutscene1.1": SubResource("Animation_4t64i"),
"cutscene2": SubResource("Animation_x330y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4s5f"]
size = Vector2(20, 277)

[sub_resource type="Animation" id="Animation_2qmwb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [72]
}

[sub_resource type="Animation" id="Animation_brl01"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_fjub6"]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_53a1e"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_hpcl6"]
resource_name = "hurt_return"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 47, 46, 45]
}

[sub_resource type="Animation" id="Animation_4qrn2"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77]
}

[sub_resource type="Animation" id="Animation_nea2d"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_863qq"]
resource_name = "protect"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [31, 32, 33]
}

[sub_resource type="Animation" id="Animation_pr270"]
resource_name = "protect_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [27, 28, 29]
}

[sub_resource type="Animation" id="Animation_efvy6"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [63, 64, 65, 66, 67, 68, 69, 70]
}

[sub_resource type="Animation" id="Animation_t47iq"]
resource_name = "stab"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_j0h8s"]
resource_name = "tired"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53]
}

[sub_resource type="Animation" id="Animation_7mkw6"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alyra:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58, 59, 60, 61]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvq0w"]
_data = {
"RESET": SubResource("Animation_2qmwb"),
"attack": SubResource("Animation_brl01"),
"die": SubResource("Animation_fjub6"),
"hurt": SubResource("Animation_53a1e"),
"hurt_return": SubResource("Animation_hpcl6"),
"idle": SubResource("Animation_4qrn2"),
"jump": SubResource("Animation_nea2d"),
"protect": SubResource("Animation_863qq"),
"protect_2": SubResource("Animation_pr270"),
"run": SubResource("Animation_efvy6"),
"stab": SubResource("Animation_t47iq"),
"tired": SubResource("Animation_j0h8s"),
"walk": SubResource("Animation_7mkw6")
}

[sub_resource type="Animation" id="Animation_ypay5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [136]
}

[sub_resource type="Animation" id="Animation_cdmbj"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83, 84, 85, 86]
}

[sub_resource type="Animation" id="Animation_ttwje"]
resource_name = "defend"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [104, 105, 106, 107]
}

[sub_resource type="Animation" id="Animation_3ppjt"]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94]
}

[sub_resource type="Animation" id="Animation_qehqp"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99]
}

[sub_resource type="Animation" id="Animation_hvqw2"]
resource_name = "hurt_return"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [99, 98, 97, 96]
}

[sub_resource type="Animation" id="Animation_invc7"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [136, 137, 138, 139, 140]
}

[sub_resource type="Animation" id="Animation_lq7pd"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [112]
}

[sub_resource type="Animation" id="Animation_g4xnv"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [128, 129, 130, 131, 132, 133, 134, 135]
}

[sub_resource type="Animation" id="Animation_5kr1m"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Varek_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125, 126, 127]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2pdl"]
_data = {
"RESET": SubResource("Animation_ypay5"),
"attack": SubResource("Animation_cdmbj"),
"defend": SubResource("Animation_ttwje"),
"die": SubResource("Animation_3ppjt"),
"hurt": SubResource("Animation_qehqp"),
"hurt_return": SubResource("Animation_hvqw2"),
"idle": SubResource("Animation_invc7"),
"jump": SubResource("Animation_lq7pd"),
"run": SubResource("Animation_g4xnv"),
"walk": SubResource("Animation_5kr1m")
}

[node name="cutscene8" type="Area2D" groups=["boss1_cutscene"]]
position = Vector2(79, 74)
script = ExtResource("1_35yc7")
boss_barriers = Array[NodePath]([NodePath("BarrierLeft"), NodePath("BarrierRight")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(89, 22)
shape = SubResource("RectangleShape2D_xwwtj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cywr2")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -27)

[node name="npc1" type="Sprite2D" parent="."]

[node name="BossSpawnMarker" type="Marker2D" parent="."]
position = Vector2(-79, 38)

[node name="BossTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" groups=["boss1_cutscene"]]
visible = false
modulate = Color(0.380392, 0.380392, 0.380392, 0.784314)
offset_left = 256.0
offset_right = 320.0
offset_bottom = 32.0

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
offset_left = 280.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 21.0
text = "Time"
metadata/_edit_use_anchors_ = true

[node name="BarrierLeft" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierLeft"]
position = Vector2(-175, -66)
shape = SubResource("RectangleShape2D_e4s5f")

[node name="BarrierRight" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierRight"]
position = Vector2(169, -66)
shape = SubResource("RectangleShape2D_e4s5f")

[node name="Alyra" type="Sprite2D" parent="."]
position = Vector2(134.4, -27.6)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_hem0l")
flip_h = true
hframes = 9
vframes = 9
frame = 72

[node name="AnimationPlayer" type="AnimationPlayer" parent="Alyra"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_yvq0w")
}

[node name="Varek_soldier" type="Sprite2D" parent="."]
position = Vector2(74.4, -27.6)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_i3w5h")
hframes = 8
vframes = 18
frame = 136

[node name="AnimationPlayer" type="AnimationPlayer" parent="Varek_soldier"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_e2pdl")
}

[node name="BlackOverlay" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = -20783.0
offset_top = -14168.0
offset_right = 3993.0
offset_bottom = 3368.0
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="BossTimer" to="." method="_on_boss_timer_timeout"]
